WET-14 hide one of menu element for "NONE" role & resetPassword component

--- a/reservationservice-web/src/css/SignIn.css
+++ b/reservationservice-web/src/css/SignIn.css
@@ -1,6 +1,6 @@
 @import '~antd/dist/antd.css';
 
-.login-form {
+.login-form--sign-in {
     max-width: 300px;
     margin: auto;
     padding-top: 20vh;
