--- a/reservationservice-web/src/App.css
+++ b/reservationservice-web/src/App.css
@@ -20,3 +20,15 @@
     justify-content: space-between;
     margin-bottom: 8px;
 }
+
+.border-top {
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.border-bottom {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.pt-24 {
+    padding-top: 24px;
+}
