--- a/reservationservice-web/src/App.css
+++ b/reservationservice-web/src/App.css
@@ -20,3 +20,19 @@
     justify-content: space-between;
     margin-bottom: 8px;
 }
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button-container button {
+    margin-left: 8px;
+}
+
+.card-label {
+    font-size: 14px;
+    line-height: 1.5;
+    color: black;
+    font-weight: 600;
+}
